<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:background="@color/mainBackground"
    android:orientation="vertical"
    tools:context=".ui.fragments.StartFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/welcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bold"
        android:text="@string/welcome"
        android:textColor="@color/dark_800"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        android:fontFamily="@font/regular"
        android:gravity="center_horizontal"
        android:text="@string/about"
        android:textColor="@color/dark_600"
        android:textSize="16sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/go"
        android:textColor="@color/white"
        android:paddingHorizontal="24dp"
        android:textSize="16sp"
        app:cornerRadius="10dp" />

</LinearLayout>