<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context="ui.fragments.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/cToolbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/mainBackground"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/mainBackground"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="true"
            app:toolbarId="@+id/toolbar">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:adjustViewBounds="true"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/settings" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolbarTheme"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/settings"
                app:titleTextColor="@color/dark_900" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/background"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/about_menu"
                    android:textColor="@color/dark_800"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/about"
                    android:textColor="@color/dark_600"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/rateButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/rate_app"
                    android:textAllCaps="false"
                    android:textColor="@color/dark_800"
                    android:textSize="14sp"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_favorite"
                    app:iconGravity="textStart"
                    app:iconSize="20dp"
                    app:iconTint="@color/dark_800"
                    app:strokeColor="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/regular"
                        android:text="@string/app_version"
                        android:textColor="@color/dark_600"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:text="@string/version_name"
                        android:textColor="@color/dark_600"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/background"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/settings_menu"
                    android:textColor="@color/dark_800"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/regular"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/tap_mode_text"
                        android:textColor="@color/dark_600"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/modeSwitcher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:gravity="center_vertical"
                        app:theme="@style/ColorSwitchStyle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/regular"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/cube_type_text"
                        android:textColor="@color/dark_600"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="0dp"
                        android:layout_gravity="end"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        app:theme="@style/ColorSwitchStyle" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/background"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/contact_us_menu"
                    android:textColor="@color/dark_800"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/telegramContact"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circle_button"
                        android:backgroundTint="@color/telegramColor"
                        android:contentDescription="Telegram"
                        android:padding="10dp"
                        android:src="@drawable/ic_telegram"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/githubContact"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/circle_button"
                        android:backgroundTint="@color/githubColor"
                        android:contentDescription="Github"
                        android:padding="10dp"
                        android:src="@drawable/ic_github"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/instagramContact"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circle_button"
                        android:backgroundTint="@color/instagramColor"
                        android:contentDescription="Instagram"
                        android:padding="10dp"
                        android:src="@drawable/ic_instagram"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/background"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/credits_menu"
                    android:textColor="@color/dark_800"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/creditsOktay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/regular"
                    android:maxLines="1"
                    android:text="Application icon made by @ok__die"
                    android:textColor="@color/dark_600"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/creditsFreepik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/regular"
                    android:maxLines="1"
                    android:text="Icons made by Freepik from www.flaticon.com"
                    android:textColor="@color/dark_600"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/background"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/info_menu"
                    android:textColor="@color/dark_800"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/semibold"
                    android:maxLines="1"
                    android:text="Open Source Licenses"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>